# Parallel_programming

./: .gitignore
1/Lab2/src/j/: L1.java
1/Lab3/parallel_programming_3/: Lab3.cs  Math.cs  parallel_programming_3.csproj
1/Lab3/parallel_programming_3/Properties/: AssemblyInfo.cs
1/Lab4/: CMakeLists.txt
1/Lab5/: Lab5.cpp
1/Lab7/: CMakeLists.txt  Lab7.cpp
1/cpp_math/: CMakeLists.txt  Math.cpp
2/Lab1/: l1.adb
2/Lab2/: CMakeLists.txt  Lab2.cpp  pthread_cr_sec.h  pthread_event.h
2/Lab2/data/: input_2.txt
2/Lab3/: Lab3.sln
2/Lab3/Lab3/: Lab3.cs  Lab3.csproj
2/Lab4/: CMakeLists.txt  Lab4.cpp
2/Lab4/data/: input_0.txt
2/Lab5/: l5.adb  math.adb  math.ads
2/Lab6/src/j/: Lab6.java  Math.java
2/Lab7/: l7.adb  math.adb  math.ads
2/Lab8/: CMakeLists.txt  Lab8.cpp
2/Lab8/data/: input.txt
Course_Project/: Course_Project.sln
Course_Project/LocalMemorySystem/: Distribution.hpp  LocalMemorySystem.vcxproj  LocalMemorySystem.vcxproj.filters  Solution.hpp  Source.cpp  Testing.hpp
Course_Project/LocalMemorySystem/data/: input_0.txt  n.txt
Course_Project/SMSLinux_entry_point/: SMSLinux_entry_point.vcxproj  SMSLinux_entry_point.vcxproj.filters
Course_Project/SharedMemorySystem/: FileReader.hpp  Problem.hpp  SharedMemorySystem.vcxproj  SharedMemorySystem.vcxproj.filters  Solution.hpp  Source.cpp  Testing.hpp  Types.cpp  Types.hpp
Course_Project/SharedMemorySystem/data/: n.txt
Lab1/: hw  hw.adb  hw.ali  l1  l1.adb  l1.ali  math.adb  math.ads  math.ali
Lab1/oth_f/: hw.ali  l1.ali  l1_o.adb  math.ali  matrix.ads  run.bat
Lab1/windows/: l1.adb  l1.adb.txt  l1.ali  l1.s  l1_o2.adb  math.adb  math.adb.txt  math.ads  math.ads.txt  math.ali  matrix.adb  matrix.ali  vector.adb  vector.ads  vector.ali
Lab2/src/j/: Math.java
Lab3/: parallel_programming_3.sln
Lab3/parallel_programming_3/: Math.cs
Lab4/: CMakeLists.txt  Lab4  Lab4.cpp
Lab5/: CMakeLists.txt  Lab5.cpp
Lab6/: CMakeLists.txt  Lab6  Lab6.cpp
Lab7/: CMakeLists.txt  Lab7.cpp
cpp_math/: CMakeLists.txt  Math.cpp  Math.hpp  Matrix.hpp  Vector.hpp
