cmake_minimum_required(VERSION 3.0.2)
project (Lab)
set(CMAKE_BUILD_TYPE Release)
add_executable(Lab5 Lab5.cpp)

include_directories (${CMAKE_CURRENT_SOURCE_DIR}/../cpp_math)
find_library(MathLib Math SHARED ${CMAKE_CURRENT_SOURCE_DIR}/../cpp_math)
target_link_libraries(Lab5 ${MathLib} ${CMAKE_THREAD_LIBS_INIT})

OPTION (USE_OpenMP "Use OpenMP" ON)
IF(USE_OpenMP)
  FIND_PACKAGE(OpenMP)
  IF(OPENMP_FOUND)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
  ENDIF()
ENDIF()