cmake_minimum_required(VERSION 3.0.2)
project (Lab)
set(CMAKE_BUILD_TYPE Release)
add_executable(Lab6 Lab6.cpp)

include_directories (${CMAKE_CURRENT_SOURCE_DIR}/../cpp_math)
find_library(MathLib Math ${CMAKE_CURRENT_SOURCE_DIR}/../cpp_math)
target_link_libraries(Lab6 ${MathLib})

find_package(MPI)
IF(MPI_CXX_FOUND)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MPI_CXX_FLAGS}")
    include_directories(PRIVATE ${MPI_CXX_INCLUDE_PATH})
    target_link_libraries(Lab6 PRIVATE ${MPI_CXX_LIBRARIES})
    set_target_properties(Lab6 PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
    set_target_properties(Lab6 PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
ENDIF()